# euler-loading

./: README.md  example.py  example_output.json  package-lock.json  pyproject.toml  sample_rds.py  vkitti_cpu_example_output.json
euler_loading/: __init__.py  _dataset_contract.py  _ds_crawler_utils.py  _metadata.py  _resolution.py  _writing.py  dataset.py  indexing.py  preprocessing.py
euler_loading/loaders/: __init__.py  _annotations.py  _writer_utils.py  contracts.py  generic.py  real_drive_sim.py  vkitti2.py
euler_loading/loaders/cpu/: __init__.py  generic.py  generic_dense_depth.py  real_drive_sim.py  vkitti2.py
euler_loading/loaders/generate/: __init__.py  __main__.py  loaders.json
euler_loading/loaders/gpu/: __init__.py  generic.py  generic_dense_depth.py  real_drive_sim.py  vkitti2.py
tests/: conftest.py  example_rds_calib.json  test_dataset.py  test_indexing.py  test_loaders.py  test_preprocessing.py  test_real_dataset.py  test_writing.py
