[project]
name = "euler-loading"
version = "0.4.0"
description = "Multi-modal PyTorch dataloader using ds-crawler indices"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "ds-crawler @ git+https://github.com/d-rothen/ds-crawler",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
markers = ["real: tests that require real on-disk datasets (deselected by default)"]

[tool.hatch.build.targets.wheel]
packages = ["euler_loading"]
