[project]
name = "euler-loading"
version = "2.0.0"
description = "Multi-modal PyTorch dataloader using ds-crawler indices"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "Pillow",
    "ds-crawler",
    "euler-dataset-contract",
]

[project.optional-dependencies]
gpu = ["torch"]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
markers = ["real: tests that require real on-disk datasets (deselected by default)"]

[tool.hatch.build.targets.wheel]
packages = ["euler_loading"]
